Enhance recruiter service to include portfolio data in user summaries